Added Dead Letter Queue for File Convert. Ch09 Finished

--- a/output.yaml
+++ b/output.yaml
@@ -23,6 +23,16 @@ Parameters:
     Description: Maximum upload size in megabytes
     MinValue: 1
     MaxValue: 100
+  ContactEmailAddress:
+    Type: String
+    Description: Email address for operational notifications
+    Default: ''
+Conditions:
+  ContactEmailSet:
+    Fn::Not:
+    - Fn::Equals:
+      - ''
+      - Ref: ContactEmailAddress
 Resources:
   WebApi:
     Type: AWS::Serverless::Api
@@ -111,6 +121,10 @@ Resources:
       - S3FullAccessPolicy:
           BucketName:
             Ref: ThumbnailsS3Bucket
+      DeadLetterQueue:
+        Type: SNS
+        TargetArn:
+          Ref: NotifyAdmins
   ConvertFunctionCanReadUploads:
     Type: AWS::IAM::Policy
     Properties:
@@ -125,6 +139,17 @@ Resources:
           - Fn::Sub: ${UploadS3Bucket.Arn}/*
       Roles:
       - Ref: ConvertFileFunctionRole
+  NotifyAdmins:
+    Type: AWS::SNS::Topic
+  AlarmNotifyOpsSubscription:
+    Type: AWS::SNS::Subscription
+    Condition: ContactEmailSet
+    Properties:
+      Endpoint:
+        Ref: ContactEmailAddress
+      Protocol: email
+      TopicArn:
+        Ref: NotifyAdmins
 Outputs:
   UserFormApi:
     Description: API Gateway endpoint URL
