--- a/output.yaml
+++ b/output.yaml
@@ -45,6 +45,8 @@ Resources:
     Properties:
       StageName:
         Ref: AppStage
+      Cors:
+        Fn::Sub: '''${WebAssetsS3Bucket.WebsiteURL}'''
   UploadS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -52,6 +54,17 @@ Resources:
         ServerSideEncryptionConfiguration:
         - ServerSideEncryptionByDefault:
             SSEAlgorithm: AES256
+      CorsConfiguration:
+        CorsRules:
+        - AllowedHeaders:
+          - '*'
+          AllowedMethods:
+          - POST
+          AllowedOrigins:
+          - Fn::GetAtt:
+            - WebAssetsS3Bucket
+            - WebsiteURL
+          MaxAge: 3600
   ThumbnailsS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -59,10 +72,27 @@ Resources:
         ServerSideEncryptionConfiguration:
         - ServerSideEncryptionByDefault:
             SSEAlgorithm: AES256
+      CorsConfiguration:
+        CorsRules:
+        - AllowedHeaders:
+          - '*'
+          AllowedMethods:
+          - POST
+          AllowedOrigins:
+          - Fn::GetAtt:
+            - WebAssetsS3Bucket
+            - WebsiteURL
+          MaxAge: 3600
+  WebAssetsS3Bucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      WebsiteConfiguration:
+        ErrorDocument: 404.html
+        IndexDocument: index.html
   ShowFormFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: s3://spm-sam-project-deployment/df345be7f28f642d7f20e73800276859
+      CodeUri: s3://spm-sam-project-deployment/7fed0cd6032ddc28c2273d528fb86492
       Handler: show-form.lambdaHandler
       Runtime: nodejs12.x
       Events:
@@ -79,29 +109,16 @@ Resources:
             Ref: UploadS3Bucket
           UPLOAD_LIMIT_IN_MB:
             Ref: UploadLimitInMB
+          CORS_ORIGIN:
+            Fn::GetAtt:
+            - WebAssetsS3Bucket
+            - WebsiteURL
+          THUMBNAILS_S3_BUCKET:
+            Ref: ThumbnailsS3Bucket
       Policies:
       - S3FullAccessPolicy:
           BucketName:
             Ref: UploadS3Bucket
-  ConfirmUploadFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: s3://spm-sam-project-deployment/3f70e2aaa695cbb0b08d99a78963aa15
-      Handler: confirm-upload.lambdaHandler
-      Runtime: nodejs12.x
-      Events:
-        ConfirmForm:
-          Type: Api
-          Properties:
-            Path: /confirm
-            Method: get
-            RestApiId:
-              Ref: WebApi
-      Environment:
-        Variables:
-          UPLOAD_S3_BUCKET:
-            Ref: ThumbnailsS3Bucket
-      Policies:
       - S3ReadPolicy:
           BucketName:
             Ref: ThumbnailsS3Bucket
@@ -169,6 +186,46 @@ Resources:
       Location:
         ApplicationId: arn:aws:serverlessrepo:us-east-1:145266761615:applications/image-magick-lambda-layer
         SemanticVersion: 1.0.0
+  DeployToS3:
+    Type: AWS::Serverless::Application
+    Properties:
+      Location:
+        ApplicationId: arn:aws:serverlessrepo:us-east-1:375983427419:applications/deploy-to-s3
+        SemanticVersion: 1.0.0
+  SiteSource:
+    Type: AWS::Serverless::Function
+    Properties:
+      Layers:
+      - Fn::GetAtt:
+        - DeployToS3
+        - Outputs.Arn
+      CodeUri: s3://spm-sam-project-deployment/a740d387de908b6645818eaa0369fcf0
+      AutoPublishAlias: production
+      Runtime: python3.7
+      Handler: deployer.resource_handler
+      Timeout: 600
+      Policies:
+      - S3FullAccessPolicy:
+          BucketName:
+            Ref: WebAssetsS3Bucket
+  DeploymentResource:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken:
+        Fn::GetAtt:
+        - SiteSource
+        - Arn
+      Version:
+        Ref: SiteSource.Version
+      TargetBucket:
+        Ref: WebAssetsS3Bucket
+      Substitutions:
+        FilePattern: '*.html'
+        Values:
+          API_URL:
+            Fn::Sub: https://${WebApi}.execute-api.${AWS::Region}.amazonaws.com/${AppStage}/
+      Acl: public-read
+      CacheControlMaxAge: 600
 Outputs:
   UserFormApi:
     Description: API Gateway endpoint URL
@@ -186,18 +243,6 @@ Outputs:
       Fn::GetAtt:
       - ShowFormFunctionRole
       - Arn
-  ConfirmUploadFunction:
-    Description: Confirm Upload Form Lambda Function ARN
-    Value:
-      Fn::GetAtt:
-      - ConfirmUploadFunction
-      - Arn
-  ConfirmUploadFunctionIamRole:
-    Description: Implicit IAM Role created for Cofirm Upload function
-    Value:
-      Fn::GetAtt:
-      - ConfirmUploadFunctionRole
-      - Arn
   uploadBucket:
     Description: S3 Bucket for uploaded files
     Value:
@@ -206,3 +251,13 @@ Outputs:
     Description: S3 Bucket for thumbnails
     Value:
       Ref: ThumbnailsS3Bucket
+  webAssetsBucket:
+    Description: S3 Bucket for Web Assets
+    Value:
+      Ref: WebAssetsS3Bucket
+  WebUrl:
+    Description: Public web URL
+    Value:
+      Fn::GetAtt:
+      - WebAssetsS3Bucket
+      - WebsiteURL
