--- a/output.yaml
+++ b/output.yaml
@@ -33,6 +33,10 @@ Parameters:
     Description: Thumbnail width in pixels
     MinValue: 10
     MaxValue: 1000
+  AllowedImageExtensions:
+    Type: String
+    Default: jpg,jpeg,png,gif
+    Description: Comma-delimited list of allowed image file extensions (lowercase)
 Conditions:
   ContactEmailSet:
     Fn::Not:
@@ -47,6 +51,11 @@ Resources:
         Ref: AppStage
       Cors:
         Fn::Sub: '''${WebAssetsS3Bucket.WebsiteURL}'''
+      MethodSettings:
+      - ResourcePath: /*
+        HttpMethod: '*'
+        ThrottlingBurstLimit: 20
+        ThrottlingRateLimit: 10
   UploadS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -92,14 +101,14 @@ Resources:
   ShowFormFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: s3://spm-sam-project-deployment/5c7ae0357ae4baf956d643970030bb6d
+      CodeUri: s3://spm-sam-project-deployment/a4a486f56ce697b1e3f60e0793fbd7b6
       Handler: show-form.lambdaHandler
       Runtime: nodejs12.x
       Events:
         ShowForm:
           Type: Api
           Properties:
-            Path: /
+            Path: /sign/{extension}
             Method: get
             RestApiId:
               Ref: WebApi
@@ -115,6 +124,8 @@ Resources:
             - WebsiteURL
           THUMBNAILS_S3_BUCKET:
             Ref: ThumbnailsS3Bucket
+          ALLOWED_IMAGE_EXTENSIONS:
+            Ref: AllowedImageExtensions
       Policies:
       - S3FullAccessPolicy:
           BucketName:
@@ -137,6 +148,7 @@ Resources:
             Events: s3:ObjectCreated:*
       Timeout: 600
       MemorySize: 1024
+      ReservedConcurrentExecutions: 10
       Environment:
         Variables:
           OUTPUT_BUCKET:
@@ -199,7 +211,7 @@ Resources:
       - Fn::GetAtt:
         - DeployToS3
         - Outputs.Arn
-      CodeUri: s3://spm-sam-project-deployment/931166c56ff34e62acd4f78867bb2252
+      CodeUri: s3://spm-sam-project-deployment/24dbd5cce843aec18cdf12e2578acde7
       AutoPublishAlias: production
       Runtime: python3.7
       Handler: deployer.resource_handler
